moved sizing of image to css file

--- a/playgrounds.css
+++ b/playgrounds.css
@@ -23,6 +23,8 @@ img
 {
     align-self: center;
     border: 10px double black;
+    width: 20%;
+    height:20%;
 }
 .arrow-button {
     display: block;
