--- a/playgrounds.css
+++ b/playgrounds.css
@@ -1,12 +1,32 @@
 /* Styling */
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
 body
 {
-    background-color: aqua;
     align-content: center;
     text-align: center;
     font-family: monospace;
 }
+
 h1
 {   border: 2px solid rebeccapurple;
     font-size: 300%;
@@ -23,8 +43,8 @@ p1
 {
     align-self: center;
     border: 10px double black;
-    width: 20%;
-    height:20%;
+    width: 150px;
+    height:150px;
 }
 .lost-gif{
     width:50%;
