--- a/playgrounds.css
+++ b/playgrounds.css
@@ -28,11 +28,39 @@ body
 }
 
 h1
-{   border: 2px solid rebeccapurple;
-    font-size: 300%;
+{
+    font-size: 400%;
     text-align: center;
     font-family: monospace;
 }
+.worm-text {
+    display: inline-block;
+    font-size: 4rem;
+    animation: worm 5s ease-in-out infinite;
+  }
+  
+  @keyframes worm {
+    0% {
+      transform: scale(1) skewX(0);
+    }
+    20% {
+      transform: scale(1.2, 0.8) skewX(-10deg);
+    }
+    40% {
+      transform: scale(0.8, 1.2) skewX(10deg);
+    }
+    60% {
+      transform: scale(1.2, 0.8) skewX(-10deg);
+    }
+    80% {
+      transform: scale(0.8, 1.2) skewX(10deg);
+    }
+    100% {
+      transform: scale(1) skewX(0);
+    }
+  }
+  
+
 p1
 {
     font-size: 200%;
